Revision history for Petal.

1.10_06
	- Fixed Petal dying on <--! <?pi?> --> comments
	- Fixed generate_events_comment incorrectly encoding entities

1.10_05
	- Changed the rules for when HTML entities are decoded

1.10_04
	- Fixed infinite recursion on non-existent modifiers
 
1.10_03
	- Fixed File::Spec use of uninitialized values
	- Fixed somehow broken Petal::_process_absolutize_pathes() 
	- Fixed entities test running nothing when using perl 5.6.x

1.10_02
	- Changed Petal to ignore Encode if Perl < 5.007
	- Fixed a @BASE_DIR inconsistency in process()
	- Fixed potential caching bug on non Unix platforms

1.10_01
	- Changed Petal's parsing backend to MKDoc::XML::TreeBuilder
	- Added prefixes in path expressions, i.e. /foo/var:bar
	- Refactored Petal's use of the Encode module

1.06 Wed Aug 20 17:41:21 2003
	- fixed omit-tag="" bug
	- Include errors are now reported in HTML comments
	- Fixed 'lots of includes' performance issues
	- Fixed a bug pointed out by Fergal concerning entities

1.05 Tue Aug 19 15:39:16 2003
	- Fixed silly warning bug
	- Added decoding HTML entities capability

1.04 Sun Aug 17 19:57:40 2003
	- Fixed repeat object and safe issues
	- Added Test::Harness and Scalar::Util dependencies
	- Fixed a bug in the way <?var is handled
	- Fixed "\n" bug in _handle_error

1.03 Tue Jul 29 12:34:36 2003
	- Fixed broken loops
	- Added tests for broken loops
	- Fixed a petal cache warning when using wide characters

1.02 Tue Jul 29 12:25:33 2003
	- 1.01 loops are completely broken
	- Emergency re-release of 1.00

1.01 Mon Jul 28 14:06:09 2003
	- "empty string" expression deleting attributes bugfix
	- Applied Fergal's attr.patch
	- Applied Fergal's die.patch
	- Changed Petal::Hash::Var to evaluate coderefs
	- Introduced repeat object
	- Changed copyright notice 
	- Updated documentation 

1.00 Tue Jul 15 20:35:19 2003
	- Applied Steve's 'error on undef' patch
	- Happy Birthday Petal!

0.96 Mon Jun 30 13:34:22 2003
	- Fixed include + unicode + encode bug
